# beambench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  SECURITY.md  SOURCE.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
.config/: nextest.toml
crates/beambench-api/: Cargo.toml
crates/beambench-api/src/: config.rs  lib.rs  response.rs  server.rs
crates/beambench-api/src/routes/: agent.rs  app.rs  assets.rs  camera.rs  console.rs  design.rs  events.rs  export.rs  imports.rs  jobs.rs  machine.rs  macros.rs  materials.rs  mod.rs  parity_scenarios.rs  preview.rs  profiles.rs  projects.rs  vector.rs
crates/beambench-camera/: Cargo.toml
crates/beambench-camera/src/: lib.rs
crates/beambench-cli/: Cargo.toml
crates/beambench-cli/src/: main.rs
crates/beambench-core/: Cargo.toml
crates/beambench-core/examples/: trace_bench.rs
crates/beambench-core/src/: alignment.rs  app_state.rs  array_ops.rs  art_library.rs  asset.rs  barcode_gen.rs  diagnostics.rs  export_bitmap.rs  export_dxf.rs  export_eps.rs  export_pdf.rs  export_print.rs  export_svg.rs  import.rs  import_dxf.rs  import_gcode.rs  import_lbrn.rs  import_pdf.rs  layer.rs  lib.rs  machine_profile.rs  macros.rs  material.rs  object.rs  operations.rs  optimization.rs  project.rs  quality_test.rs  settings.rs  text_path.rs  trace.rs  variable_text.rs  workspace.rs
crates/beambench-core/src/potrace/: README.md  bitmap.rs  convert.rs  curve.rs  math_utils.rs  mod.rs  polygon.rs  types.rs
crates/beambench-core/src/vector/: boolean.rs  buffer.rs  cleanup.rs  convert.rs  flatten.rs  mod.rs  node_edit.rs  normalize.rs  offset.rs  path_ops.rs  tabs.rs  text_to_path.rs  transform.rs  trim.rs
crates/beambench-core/tests/: image_formats.rs  potrace_tests.rs  workflow_scenarios.rs
crates/beambench-discovery/: Cargo.toml
crates/beambench-discovery/src/: lib.rs
crates/beambench-galvo/: Cargo.toml
crates/beambench-galvo/src/: lib.rs
crates/beambench-grbl/: Cargo.toml
crates/beambench-grbl/src/: adapter.rs  commands.rs  error.rs  gcode.rs  identity.rs  identity_probe.rs  lib.rs  parser.rs  session.rs  settings.rs  state.rs
crates/beambench-grbl/tests/: fluidnc_adapter.rs  grblhal_adapter.rs  identity_corpus.rs  laserpecker_compatibility.rs
crates/beambench-grbl/tests/fixtures/: fluidnc_serial_v1.json  grbl_family_identity_v1.json  grblhal_serial_v1.json  laserpecker_grbl_v1.json
crates/beambench-lihuiyu/: Cargo.toml
crates/beambench-lihuiyu/src/: compiler.rs  lib.rs  protocol.rs  runtime.rs  transport.rs  usb.rs  virtual_controller.rs
crates/beambench-lihuiyu/tests/: job_corpus.rs  protocol_corpus.rs
crates/beambench-lihuiyu/tests/fixtures/: job_corpus.json  protocol_corpus.json
crates/beambench-marlin/: Cargo.toml
crates/beambench-marlin/src/: adapter.rs  gcode.rs  identity.rs  laser.rs  lib.rs  probe.rs  session.rs  snapmaker.rs
crates/beambench-marlin/tests/: gcode_job_corpus.rs  identity_corpus.rs  laser_command_corpus.rs  session_corpus.rs  snapmaker_gcode_corpus.rs
crates/beambench-marlin/tests/fixtures/: gcode_jobs.json  identity_transcripts.json  laser_commands.json  session_transcripts.json  snapmaker_gcode_jobs.json
crates/beambench-planner/: Cargo.toml
crates/beambench-planner/src/: builder.rs  error.rs  extensions.rs  fill_raster.rs  image_params.rs  lib.rs  plan.rs  ramp.rs  scanline.rs  stats.rs  validate.rs
crates/beambench-planner/src/optimize/: dedupe.rs  direction.rs  inner_first.rs  input.rs  mod.rs  order.rs  sort_keys.rs  start_point.rs  travel.rs
crates/beambench-planner/tests/: benchmark_fixtures.rs  benchmark_snapshots.rs  characterization_sort.rs  fill_integration.rs  generate_fixtures.rs  phase4b_flag_effects.rs  phase4c_flag_effects.rs  sub_layers_integration.rs  tab_workflow.rs
crates/beambench-preview/: Cargo.toml
crates/beambench-preview/src/: distill.rs  lib.rs  types.rs
crates/beambench-project/: Cargo.toml
crates/beambench-project/src/: lib.rs  persistence.rs  preferences.rs
crates/beambench-raster/: Cargo.toml
crates/beambench-raster/src/: adjust.rs  cache.rs  decode.rs  dither.rs  error.rs  fill.rs  filters.rs  lib.rs  pipeline.rs  rotate.rs  transform.rs  transpose.rs  types.rs
crates/beambench-ruida/: Cargo.toml
crates/beambench-ruida/src/: adapter.rs  compiler.rs  lib.rs  protocol.rs  runtime.rs  transport.rs  virtual_controller.rs
crates/beambench-ruida/tests/: protocol_corpus.rs  raster_job_corpus.rs  vector_job_corpus.rs
crates/beambench-ruida/tests/fixtures/: protocol_corpus.json  raster_jobs.json  vector_jobs.json
crates/beambench-serial/: Cargo.toml
crates/beambench-serial/src/: error.rs  lib.rs  mock.rs  network.rs  port_list.rs  real.rs  telemetry.rs  transport.rs
crates/beambench-service/: Cargo.toml
crates/beambench-service/src/: agent.rs  context.rs  error.rs  events.rs  history.rs  lib.rs  lihuiyu_runtime.rs  material_apply.rs  persist.rs  ruida_runtime.rs  runtime.rs  validation.rs
crates/beambench-service/src/ops/: app.rs  assets.rs  camera.rs  controller_choice.rs  design.rs  discovery.rs  event_stream_scenarios.rs  export.rs  feedback.rs  image_scenarios.rs  imports.rs  machine.rs  mod.rs  nesting.rs  output.rs  persistence.rs  planning.rs  preferences.rs  profiles.rs  project.rs  quality_test.rs  vector.rs
crates/beambench-streamer/: Cargo.toml
crates/beambench-streamer/src/: engine.rs  error.rs  job.rs  lib.rs  preflight.rs  progress.rs
tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev-compare.conf.json  tauri.windows.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: logging.rs  main.rs  native_menu.rs  panic_reports.rs  state.rs  theme.rs
tauri-app/src-tauri/src/commands/: agent.rs  app.rs  art_library.rs  camera.rs  export.rs  feedback.rs  import.rs  machine.rs  mod.rs  persistence.rs  planner.rs  preview.rs  project.rs  quality_test.rs  variable_text.rs  vector.rs
tauri-app/src-tauri/src/events/: mod.rs
(+584 files in other folders)
