[package]
name = "beambench-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-core = { path = "../beambench-core" }
beambench-service = { path = "../beambench-service" }
beambench-planner = { path = "../beambench-planner" }
beambench-grbl = { path = "../beambench-grbl" }
beambench-serial = { path = "../beambench-serial" }
beambench-project = { path = "../beambench-project" }
beambench-preview = { path = "../beambench-preview" }
beambench-streamer = { path = "../beambench-streamer" }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
sha2 = "0.10"
base64 = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tempfile = { workspace = true }
