[package]
name = "beambench-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
chrono = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
nokhwa = { version = "0.10.11", features = ["input-native"] }
