[package]
name = "beambench-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-serial = { path = "../beambench-serial" }
serde = { workspace = true }
chrono = { workspace = true }
