[package]
name = "beambench-lihuiyu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-planner = { path = "../beambench-planner" }
serde = { workspace = true }
thiserror = { workspace = true }
nusb = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
