[package]
name = "beambench-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-planner = { path = "../beambench-planner" }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
