[package]
name = "beambench-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-core = { path = "../beambench-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
