[package]
name = "beambench-ruida"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-planner = { path = "../beambench-planner" }
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
