[package]
name = "beambench-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-camera = { path = "../beambench-camera" }
beambench-buildinfo = { path = "../beambench-buildinfo" }
beambench-common = { path = "../beambench-common" }
beambench-core = { path = "../beambench-core" }
beambench-discovery = { path = "../beambench-discovery" }
beambench-dsp = { path = "../beambench-dsp" }
beambench-galvo = { path = "../beambench-galvo" }
beambench-gcode = { path = "../beambench-gcode" }
beambench-grbl = { path = "../beambench-grbl" }
beambench-lihuiyu = { path = "../beambench-lihuiyu" }
beambench-marlin = { path = "../beambench-marlin" }
beambench-smoothieware = { path = "../beambench-smoothieware" }
beambench-serial = { path = "../beambench-serial" }
beambench-streamer = { path = "../beambench-streamer" }
beambench-planner = { path = "../beambench-planner" }
beambench-preview = { path = "../beambench-preview" }
beambench-ruida = { path = "../beambench-ruida" }
beambench-project = { path = "../beambench-project" }
beambench-raster = { path = "../beambench-raster" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
image = { workspace = true }
sha2 = "0.10"
base64 = { workspace = true }
zip = { workspace = true }
u-nesting-d2 = { workspace = true }

[dev-dependencies]
