[package]
name = "beambench-streamer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beambench-common = { path = "../beambench-common" }
beambench-grbl = { path = "../beambench-grbl" }
beambench-planner = { path = "../beambench-planner" }
beambench-core = { path = "../beambench-core" }
beambench-serial = { path = "../beambench-serial" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
